--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.10"
 Django = "^5.0.6"
 
+[tool.poetry.dev-dependencies]
+ipython = "^8.26.0"
+django-extensions = "^3.2.3"
+
 
 [build-system]
 requires = ["poetry-core"]
