--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ Django = "^5.0.6"
 [tool.poetry.dev-dependencies]
 ipython = "^8.26.0"
 django-extensions = "^3.2.3"
+django-crispy-forms = "^2.2"
+crispy-bootstrap5 = "^2024.2"
 
 
 [build-system]
