--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ readme = "README.md"
 python = "^3.10"
 Django = "^5.0.6"
 
+
 [tool.poetry.dev-dependencies]
 ipython = "^8.26.0"
 django-extensions = "^3.2.3"
-django-crispy-forms = "^2.2"
-crispy-bootstrap5 = "^2024.2"
+unidecode = "^1.3.8"
 
 
 [build-system]
