--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^5.0.6"
+django-trix-editor = "^0.3"
 
 
 [tool.poetry.dev-dependencies]
